maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:9: error: not found: value sortie
    avance(sortie) 
           ^ShortestPathMaze:17: error: not found: value aMurSud
  if (!aMurSud(x,y)&& getIndication(x,y-1)!=null)
       ^ShortestPathMaze:23: error: not found: value aMurEst
  if (!aMurEst(x,y)&& getIndication(x+1,y)!=null)
       ^