maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    val l = getMondeLargeur()
    val h = getMondeHauteur()
    for (i<-0 to l-1){
        for(j<- 0 to h-1)
            {if (aBiscuit(i,j))
                {var sortie = (i,j);setIndication(i,j,0)}}}
    avance(sortie) 
  
  
}


def avance(x:Int,y:Int)  {
  var n=getIndication(x,y)
  if (!aMurSud(x,y)&& getIndication(x,y-1)!=null)
                {setIndication(x,y-1,n+1)}
  if (!aMurNord(x,y)&& getIndication(x,y+1)!=null)
                {setIndication(x,y+1,n+1)}
  if (!aMurOuest(x,y)&& getIndication(x-1,y)!=null)
                {setIndication(x-1,y,n+1)}
  if (!aMurEst(x,y)&& getIndication(x+1,y)!=null)
                {setIndication(x+1,y,n+1)}             
                
                
                
                }